<?xml version="1.0" encoding="utf-8"?>
<!--用于账户管理的item-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout_account_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView_account_item_name"
        android:layout_width="100dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:text="账户名称是"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginTop="16dp"
        android:text="余额："
        app:layout_constraintEnd_toStartOf="@+id/textView_account_item_money"
        app:layout_constraintStart_toEndOf="@+id/textView_account_item_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_account_item_money"
        android:layout_width="wrap_content"
...
