...
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:title="@string/add_account" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_account_balance_wallet_24"
        android:title="@string/title_notifications" />



</menu>
